src/app/features/weekly-attendance/components/attendance-header/attendance-header.component.scss
.time-card-container {
  width: 327px;
  height: 92px;
  padding: 20px;
  display: flex;
  flex-direction: row;
  gap: 30px;
  background: linear-gradient(to bottom, #FFFFFF80 16%, #FED8B34D 100%);
  box-shadow: 2px 3px 10.8px 0px #FFC880A8;
  border-radius: 20px;

  .info-section {
    display: flex;
    flex-direction: column;
    gap: 4px;

    .info-row {
      display: flex;
      align-items: center;
      gap: 4px;

      .icon {
        width: 24px;
        height: 24px;
      }

      span {
        font-size: 12px;
        line-height: 16px;
        letter-spacing: -0.15px;
      }

      .location-text {
        color: #505A5F;
        font-weight: 500;
      }

      .date-text {
        color: #505A5F;
        font-weight: 700;
      }
    }
  }

  .time-display {
    font-weight: 700;
    font-size: 29px;
    line-height: 40px;
    letter-spacing: -0.5px;
    color: var(--brand-600);
  }
}

